# DEWA

./: README.md
Solution1/: README.md  extended_kalman_filter.cpp  extended_kalman_filter.h  kalman_filter.cpp  kalman_filter.h
Solution1/customEKF/: CMakeLists.txt  package.xml
Solution1/customEKF/include/: extended_kalman_filter.h  kalman_filter.h
Solution1/customEKF/src/: extended_kalman_filter.cpp  kalman_filter.cpp
Solution1/localisation_gpu_odom_ins/: CMakeLists.txt  package.xml
Solution1/localisation_gpu_odom_ins/config/: localisation_gpu_odom_ins.yaml
Solution1/localisation_gpu_odom_ins/launch/: custom_ekf_localisation.launch  custom_localisation.launch  custom_mapserver.launch  custom_navsat_transform.launch  rvizlaunch.launch
Solution1/localisation_gpu_odom_ins/map/: map.pgm  map.yaml
Solution2/: README.md
Solution2/twowheeled_description/: CMakeLists.txt  package.xml
Solution2/twowheeled_description/config/: costmap_common.yaml
Solution2/twowheeled_description/launch/: empty_world.launch  move_base.launch  move_base_demo.launch  rviz.launch  spawn.launch
Solution2/twowheeled_description/src/: waypoint_navigation.cpp
Solution2/twowheeled_description/urdf/: macros.xacro  materials.xacro  twowheeled.gazebo  twowheeled.xacro
Solution2/warthog_navigation/: CMakeLists.txt  package.xml
Solution2/warthog_navigation/launch/: move_base.launch  move_base_demo.launch  warthog_waypoint_navigation.launch
Solution2/warthog_navigation/src/: waypoint_navigation.cpp
Solution3/: Mapping by Swarm Robots.ipynb  README.md  RecoveredHeatMap.ipynb  TemperatureGradient.ipynb
Solution3/jackal_swarm/: CMakeLists.txt  README.md  package.xml
Solution3/jackal_swarm/include/: sensormap.h
Solution3/jackal_swarm/iofiles/: MeasuredTemperature.csv
Solution3/jackal_swarm/launch/: jackal_measure_temperature.launch
Solution3/multi_jackal_simulator/: CMakeLists.txt  package.xml
Solution3/multi_jackal_tutorials/: CMakeLists.txt  package.xml
Solution3/multi_jackal_tutorials/include/: sensormap.h  waypointmulti.h
Solution3/multi_jackal_tutorials/iofiles/: MeasuredTemperature3.csv  temperatureActual.csv
Solution3/multi_jackal_tutorials/launch/: multijackal_measure_temperature.launch  six_jackal.launch
Solution3/multi_jackal_tutorials/rviz/: six_jackal.rviz
Solution3/multi_jackal_tutorials/src/: sensormap.cpp  waypointRobot1.cpp
Solution4/: DEWA_Solution4.ipynb
(+12 files in other folders)
